# mail-spoof-audit

./: README.md  pyproject.toml
mail-spoof-audit/: cli.py
